# proxysql

./: CMakeLists.txt  README-cmake.md
include/: MySQL_Session.h
lib/: MySQL_Logger.cpp
patches/: mariadb-connector-c-unified.patch  sqlite3-from_unixtime.patch
